[tool.poetry]
name = "webhook-to-fedora-messaging-messages"
version = "1.0.0"
description = "A schema package for messages sent by Webhook To Fedora Messaging"
authors = ["Fedora Infrastructure Team <infrastructure@lists.fedoraproject.org>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "http://github.com/fedora-infra/webhook-to-fedora-messaging-messages"
repository = "http://github.com/fedora-infra/webhook-to-fedora-messaging-messages"
keywords = ["fedora-messaging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
fedora-messaging = "^3.3.0"

[tool.poetry.dev-dependencies]
black = ">=22.6.0"
pytest = ">=7.0.0"
pytest-cov = ">=3.0.0"
coverage = {extras = ["toml"], version = ">=7.0.0"}
ruff = ">=0.0.253"
reuse = ">=1.1.0"

[tool.poetry.plugins."fedora.messages"]
"webhook_to_fedora_messaging.github.message_v1" = "webhook_to_fedora_messaging_messages.github.github:GithubMessageV1"

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F", "W", "I", "UP", "S", "B", "RUF"]
line-length = 100
target-version = "py38"
# ignore = ["RUF010", "UP038"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
"webhook_to_fedora_messaging_messages/__init__.py" = ["F401"]

[tool.coverage.run]
branch = true
source = [
    "webhook_to_fedora_messaging_messages",
]

[tool.coverage.report]
# fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
omit = [
    "tests/*",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
